# anitube-ua-downloader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  REFACTORING_SUMMARY.md  docker-compose.yml  main.py  pyproject.toml
Elfen Lied/Season 01/: Elfen Lied S01E08.mp4.part-Frag0  Elfen Lied S01E08.mp4.part-Frag1  Elfen Lied S01E08.mp4.part-Frag10  Elfen Lied S01E08.mp4.part-Frag100  Elfen Lied S01E08.mp4.part-Frag101  Elfen Lied S01E08.mp4.part-Frag102  Elfen Lied S01E08.mp4.part-Frag103  Elfen Lied S01E08.mp4.part-Frag104  Elfen Lied S01E08.mp4.part-Frag105  Elfen Lied S01E08.mp4.part-Frag106  Elfen Lied S01E08.mp4.part-Frag107  Elfen Lied S01E08.mp4.part-Frag108  Elfen Lied S01E08.mp4.part-Frag109  Elfen Lied S01E08.mp4.part-Frag11  Elfen Lied S01E08.mp4.part-Frag110  Elfen Lied S01E08.mp4.part-Frag111  Elfen Lied S01E08.mp4.part-Frag112  Elfen Lied S01E08.mp4.part-Frag113  Elfen Lied S01E08.mp4.part-Frag114  Elfen Lied S01E08.mp4.part-Frag115  Elfen Lied S01E08.mp4.part-Frag116  Elfen Lied S01E08.mp4.part-Frag117  Elfen Lied S01E08.mp4.part-Frag118  Elfen Lied S01E08.mp4.part-Frag119  Elfen Lied S01E08.mp4.part-Frag12  Elfen Lied S01E08.mp4.part-Frag120  Elfen Lied S01E08.mp4.part-Frag121  Elfen Lied S01E08.mp4.part-Frag122  Elfen Lied S01E08.mp4.part-Frag123  Elfen Lied S01E08.mp4.part-Frag124  (+157 more)
aniloader/: __init__.py  downloader.py  exceptions.py  extractor.py  models.py  protocols.py  scraper.py  scraper_refactored.py
tests/: conftest.py  test_downloader.py  test_exceptions.py  test_extractor.py  test_scraper.py  test_selector.py
(+28 files in other folders)
