[project]
name = "aniloader"
version = "0.1.0"
description = "Automated downloader for anime from anitube.in.ua"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "pydantic>=2.5.0",
    "yt-dlp>=2024.1.0",
]
